2020-09-17  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/spdlog/*: Upgraded to upstream release 1.8.0
	* inst/include/spdlog/logger-inl.h: Switch to REprintf as before

	* .travis.yml: Use BSPM, turn os macOS

2020-09-08  Dirk Eddelbuettel  <edd@debian.org>

 	* DESCRIPTION (Version, Date): Version 0.0.1

2020-08-21  Dirk Eddelbuettel  <edd@debian.org>

	* src/exampleRsink.cpp: Renamed from exampleFour()
	* man/exampleRsink.Rd: Idem
	* src/RcppExports.cpp: Updated
	* R/RcppExports.R: Idem

	* README.md: Some more edits

2020-08-20  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/RcppSpdlog: Easy wrapper for spdlog and R sink
	* inst/include/rcpp_sink.h: A sink for R using Rcpp::Rcout

	* src/exampleFour.cpp: Rewritten and now R CMD check clean
	* inst/examples/examplesFour.cpp: Now in src/, R sink in its header

	* README.md: Edited, added two badges

	* cleanup: Added
	* .editorconfig: Idem

2020-08-19  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/spdlog/*: Using spdlog version 1.7
	* inst/examples/*: Four simple usage examples

	* .travis.yml: Added though no real tests present

	* src/exampleFour.cpp (exampleFour): Simple wrapper around simple
	Rcpp logger class which still triggers R warnings
	* man/exampleFour.Rd: Basic help page
	* src/RcppExports.cpp: Generated
	* src/Makevars: Added
	* R/RcppExports.R: Idem
	* NAMESPACE: Added
	* DESCRIPTION: Added Imports: and LinkingTo: for Rcpp