@@ -3,7 +3,8 @@
 
 #' spdlog Example using a sink for R
 #'
-#' A simple example invoking a derived R/Rcpp logger.
+#' A simple example invoking a derived R/Rcpp logger. Also demonstrates the
+#' stopwatch feature. For more features see the 'spdlog' documnetation.
 #'
 #' Note that this no longer triggers R warnings thanks to excellent help by
 #' Gabi Melman.
